testsuite/tests/semantic_errors/missing_entity/test.out
Analyzing test.adb
##################

Resolving xrefs for node <ObjectDecl ["X"] test.adb:2:4-2:30>
*************************************************************

Name resolution failed as expected with:

test.adb:2:19: error: no such entity
2 |    X : Integer := Foo (True);
  |                   ^^^



Done.
